# aether

./: .clang-format-ignore  .gitignore  Makefile.am  bootstrap.sh  configure.ac  grammar.md
cli/: Makefile.am  main.c
interpreter/: Makefile.am  interpreter.c  interpreter.h
parser/: Makefile.am  lexer.l  parser.y  parser_state.h  syntax.c  syntax.h
tests/: Makefile.am  aether.at  atlocal.in  check.h  local.at  package.m4  string_lib.at  testsuite  testsuite.at
tests/progs/: expr.ae
utils/: Makefile.am  alloc.h  buffer.c  buffer.h  dict.c  dict.h  list.c  list.h  logger.c  logger.h  string_lib.c  string_lib.h  test_buffer  test_buffer.c  test_dict.c  test_list.c  test_logger  test_logger.c  test_string_lib  test_string_lib.c
utils/.libs/: test_buffer  test_logger
